Revert "Try fix for hover on mobile"
This reverts commit b62c4b9814eda03e90e709201f0daf7ae37040b7.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,3 @@
-@media only screen and (max-width: 700px) {
-    .optest:hover {
-        opacity: 0;
-    }
-
-
 * {
     cursor: none;
 }
